crates/cribo/tests/snapshots/execution_results@xfail_bundle_third_party_pep562_conditional.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_pep562_conditional/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 27, in <module>",
}
