crates/cribo/tests/snapshots/execution_results@xfail_bundle_third_party_pkg_resources.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_pkg_resources/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 29, in <module>",
}
